fixes odd gap between navbar and search-bar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1293,7 +1293,7 @@ body {
 }
 
 .header-wrap + .aw-main {
-  padding-top: 152px;
+  padding-top: 80px;
 }
 
 .header-wrap.top-bar-open + .aw-main .product-top.fixed {
